# upnplib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  MIT_License  README.md  TODO
Compa/: CMakeLists.txt  directory.dox
Compa/inc/: Callback.hpp  UpnpActionComplete.hpp  UpnpActionRequest.hpp  UpnpDiscovery.hpp  UpnpEvent.hpp  UpnpEventSubscribe.hpp  UpnpExtraHeaders.hpp  UpnpFileInfo.hpp  UpnpGlobal.hpp  UpnpInet.hpp  UpnpIntTypes.hpp  UpnpStateVarComplete.hpp  UpnpStateVarRequest.hpp  UpnpString.hpp  UpnpSubscriptionRequest.hpp  UpnpUniStd.hpp  init.hpp  ithread.hpp  list.hpp  upnp.hpp  upnpdebug.hpp  upnptools.hpp
Compa/src/: globalvars.cpp  lib_info.cpp
Pupnp/: CMakeLists.txt  directory.dox
Pupnp/include/: README.md
Pupnp/ixml/: CMakeLists.txt
Pupnp/src/: threadpool_init.cpp
Pupnp/upnp/: CMakeLists.txt
Umock/: CMakeLists.txt
Umock/src/: arpa_inet.cpp  arpa_inet_mock.cpp  iphlpapi.cpp  iphlpapi_mock.cpp  net_if.cpp  netdb_mock.cpp  pthread_mock.cpp  pupnp_httprw-bak.cpp  pupnp_sock.cpp  ssl_mock.cpp  stdio.cpp  stdio_mock.cpp  stdlib.cpp  stdlib_mock.cpp  stringh.cpp  sys_socket.cpp  sys_socket_mock.cpp  unistd_mock.cpp  winsock2.cpp
Upnplib/: .clang-format  CMakeLists.txt  README.md  directory.dox
Upnplib/src/: global.cpp
Utest/compa/: CMakeLists.txt
Utest/upnplib/: CMakeLists.txt  test_addrinfo.cpp  test_general.cpp  test_netaddr.cpp  test_sockaddr.cpp  test_socket.cpp  test_webserver.cpp
apps/: CMakeLists.txt
apps/src/: upnplib.cpp
compa/: CMakeLists.txt
compa/inc/: UpnpActionRequest.hpp  UpnpEvent.hpp  UpnpExtraHeaders.hpp  UpnpFileInfo.hpp  UpnpIntTypes.hpp  UpnpStdInt.hpp  UpnpString.hpp  UpnpSubscriptionRequest.hpp  init.hpp  ithread.hpp  upnp.hpp  upnpdebug.hpp  upnptools.hpp
compa/include/: Callback.hpp  FreeList.hpp  GenlibClientSubscription.hpp  LinkedList.hpp  README.md  ThreadPool.hpp  TimerThread.hpp  UpnpActionComplete.hpp  UpnpActionRequest.hpp  UpnpDiscovery.hpp  UpnpEvent.hpp  UpnpEventSubscribe.hpp  UpnpExtraHeaders.hpp  UpnpFileInfo.hpp  UpnpGlobal.hpp  UpnpInet.hpp  UpnpIntTypes.hpp  UpnpStateVarComplete.hpp  UpnpStateVarRequest.hpp  UpnpStdInt.hpp  UpnpString.hpp  UpnpSubscriptionRequest.hpp  UpnpUniStd.hpp  VirtualDir.hpp  client_table.hpp  config.hpp  gena.hpp  gena_ctrlpt.hpp  gena_device.hpp  httpparser.hpp  httpreadwrite.hpp  init.hpp  ithread.hpp  list.hpp  md5.hpp  membuffer.hpp  miniserver.hpp  parsetools.hpp  service_table.hpp  soaplib.hpp  (+15 more)
compa/src/: globalvars.cpp  init.cpp
core/: CMakeLists.txt
core/include/: ThreadPool.hpp  port.hpp
core/src/: global.cpp  init.cpp  mockObj.cpp  strndup.cpp  upnplibInfo.cpp
gtest/: CMakeLists.txt  README.md  TODO  compile.sh  init_global_var.inc  test-new_upnpapi.cpp  test-old_upnpapi.cpp  test-rein_upnpapi.cpp  test-trad_upnpapi.cpp  test_template.cpp  test_threadutil.cpp  test_trad_upnpapi.cpp  test_upnpapi.cpp  test_upnpdebug.cpp
gtest/inc/: tools.h
gtest/tools/: README  compile-minimal.sh  compile-old.sh  compile.sh  ifaddrs.cpp  test_tools.cpp  tools.cpp
gtests/: CMakeLists.txt  README.md  init_global_var.inc  key.pem  test_FreeList.cpp  test_LinkedList.cpp  test_ThreadPool.cpp  test_TimerThread.cpp  test_UpnpString.cpp  test_UpnpString_mock.cpp  test_httpparser.cpp  test_httpreadwrite.cpp  test_list.cpp  test_membuffer.cpp  test_miniserver.cpp  test_simple.cpp  test_simple_compa.cpp  test_sock.cpp  test_strintmap.cpp  test_template.cpp  test_threadutil.cpp  test_upnpapi.cpp  test_upnpapi_default_old.cpp  test_upnpapi_unix.cpp  test_upnpapi_win32.cpp  test_upnpdebug.cpp  test_upnpdebug_mock.cpp  test_upnpdebug_nomock.cpp  test_upnptools.cpp  test_upnptools_compa.cpp  test_uri.cpp
gtests/cmake/: autoheader.cmake
gtests/compa/: CMakeLists.txt  test_UpnpString.cpp  test_miniserver.cpp  test_openssl_threaded.cpp  test_sock.cpp  test_sock_openssl.cpp
gtests/googletest/: CMakeLists.txt
gtests/inc/: tools.h
gtests/include/: custom_gtest_tools_all.hpp  custom_gtest_tools_uix.hpp  custom_gtest_tools_unix.hpp  custom_gtest_tools_win.hpp  custom_gtest_tools_win32.hpp  tools.h  tools.hpp  upnpifaddrs.h  upnpifaddrs.hpp  upnplib_gtest_tools.hpp  upnplib_gtest_tools_unix.hpp  upnplib_gtest_tools_win32.hpp
gtests/pupnp/: CMakeLists.txt  test_UpnpString.cpp
gtests/sample/: CMakeLists.txt  test_tv_device.cpp
gtests/test_api.d/: CMakeLists.txt  test_UpnpFileInfo.cpp  test_upnpapi.cpp  test_upnpapi_unix.cpp  test_upnpapi_win32.cpp
gtests/test_http.d/: CMakeLists.txt  test_httpparser.cpp  test_httpreadwrite.cpp  test_netconnect.cpp  test_webserver.cpp
gtests/test_httpreadwrite.d/: CMakeLists.txt  test_httpreadwrite.cpp  test_netconnect.cpp
gtests/test_sample.d/: CMakeLists.txt  test_tv_device.cpp
gtests/test_threadutil.d/: CMakeLists.txt  test_FreeList.cpp  test_LinkedList.cpp  test_TimerThread.cpp
gtests/test_upnpapi.d/: CMakeLists.txt  test_upnpapi.cpp  test_upnpapi_unix.cpp  test_upnpapi_win32.cpp
gtests/test_uri.d/: CMakeLists.txt  test_parse_uri.cpp  test_uri.cpp  test_uri_parse.cpp  test_url_class.cpp  test_urlparser.cpp
gtests/tools/: README.md  compile-pupnp.sh  compile.sh  compile_minimal.sh  custom_gtest_tools_all.cpp  custom_gtest_tools_uix.cpp  custom_gtest_tools_unix.cpp  custom_gtest_tools_win.cpp  custom_gtest_tools_win32.cpp  init_global_vars.cpp  mockObj.cpp  mockObj_unix.cpp  mockObj_win32.cpp  snippets.txt  status.cpp  test_container.cpp  test_mutex.cpp  test_tools.cpp  test_tools_uix.cpp  test_tools_unix.cpp  test_tools_win.cpp  test_tools_win32.cpp  test_utest_unix.cpp  tools.cpp  upnpifaddrs.cpp  upnplib_gtest_tools.cpp  upnplib_gtest_tools_unix.cpp  upnplib_gtest_tools_win32.cpp  utest.cpp
gtests/upnplib/: CMakeLists.txt  test_addrinfo.cpp  test_general.cpp  test_sock.cpp  test_sockaddr.cpp  test_sockaddr2.cpp  test_socket.cpp  (+3 more)
openssl/: CMakeLists.txt  README.md
pupnp/: CMakeLists.txt
sample/: CMakeLists.txt  README.md  api_samples.cpp  bugfix.txt
umock/: CMakeLists.txt
upnp/: CMakeLists.txt
upnplib/: CMakeLists.txt  directory.dox  upnplib.dox
utest/: CMakeLists.txt  README.md  test_simple.cpp
(+6982 files in other folders)
